--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio</title>
+    <meta name="Lukas Frederiksen Portfolio" content="My personal portfolio for internships">
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -81,8 +82,8 @@
         </h1>
 
         <p class="heroSubText">
-          Copenhagen based aspriring UX designer currently studying Multimedia
-          design at the Copenhagen school of Design and Technology.
+          Copenhagen based aspriring UX/UI designer currently studying Multimedia
+          Design at the Copenhagen school of Design and Technology.
         </p>
 
         <div class="scrollSection">
@@ -115,7 +116,7 @@
               <div class="frontProjectTextContainer">
                 <div class="flexContainer">
                   <h3 class="projectCardTitle">Siff Røder</h3>
-                  <p class="projectCardOverview">Semester project</p>
+                  <p class="projectCardOverview">Exam project</p>
                   <p class="cardDescription">
                     Design and development of a website with dynamic content for
                     a clothing shop.
@@ -158,8 +159,8 @@
                   <h3 class="projectCardTitle">Ungdomsbyen</h3>
                   <p class="projectCardOverview">Semester project</p>
                   <p class="cardDescription">
-                    Redesigning information architecture and design of a Comany
-                    offering lectures about FN world goals to young people.
+                    Redesign of information architecture and visual idenity for a company
+                    offering lectures about the 17 UN world goals to young people.
                   </p>
                 </div>
               </div>
@@ -195,7 +196,7 @@
                   <p class="projectCardOverview">Speed design challenge</p>
                   <p class="cardDescription">
                     Fun design challenge, where I had to recreate an animated
-                    heropage in under 45 minutes using Figma
+                    hero page in under 45 minutes using Figma
                   </p>
                 </div>
               </div>
@@ -230,7 +231,7 @@
                 <div class="flexContainer">
                   <h3 class="projectCardTitle">Frogalypse game</h3>
                   <p class="projectCardOverview">
-                    Design & coding exam project
+                    Design & coding project
                   </p>
                   <p class="cardDescription">
                     First semester project, where i coded and designed my very
