--- a/siffroder.html
+++ b/siffroder.html
@@ -77,8 +77,8 @@
         <div class="singleProjectHeader">
           <h1>Siff Røder</h1>
           <p class="singleProjectSubHeader">
-            Design and development of a website and visual idenity of a newly
-            founded clothing store located in the suburbs of Copenhagen
+            Design and development of a website and visual idenity for a newly
+            founded clothing store, located in the suburbs of Copenhagen
           </p>
         </div>
       </div>
@@ -93,11 +93,11 @@
         <div class="projectOverviewWrapper">
          
           <p>
-            This project aimed at creating and designing a website for a client,
+            This project aimed at designing and developing a website for a client,
             a newly opened local clothing shop in the suburbs of Copenhagen.
-            This project focused on product design and web development of a
-            website, aswell as creating a consistent visual identity across the
-            Companies' social media platforms.
+            This project focused on product design and UX design, 
+            aswell as creating a consistent visual identity across the
+            Companies' new website & social media platforms.
           </p>
         </div>
 
@@ -135,8 +135,8 @@
         <div class="theChallengeWrapper">
         
           <p>
-            As the company did not have a website, this project encompassed the whole process of identifying user needs and creating a new visual identity.
-            The company wished for an only sphere where local shoppers could browse products, and let them put items aside in the physical shop. This was so that users could come and easily try out their chosen items before purchase.
+           The project encompassed the whole process of identifying the target audience, user needs and testing the usability of our design.
+            The company wished for an online sphere where local shoppers could browse products, and let them put items aside in the physical shop for later testing.
           </p>
         </div>
 
@@ -145,17 +145,17 @@
 
             <div class="challengeNumberFlexbox">
               <span class="challengeNumber" style="letter-spacing: 5px">01</span>
-          <p>  Allow users to browse products online</p>
+          <p>  Design taxonomy and user flows </p>
         </div>
 
          <div class="challengeNumberFlexbox">
 <span class="challengeNumber">02</span>
-          <p>  Create a "reserve item" system
+          <p>  Design a "reserve item" system
           </p>
 </div>
  <div class="challengeNumberFlexbox">
 <span class="challengeNumber">03</span>
-          <p>  Convey atmosphere of the physical shop
+          <p>  Convey the atmosphere of the physical shop
           </p>
         </div>
 </div>
@@ -165,7 +165,7 @@
         <section class="procesSection"> 
               <div class="procesIntro">
           <h2>The process</h2>
-<p>The process of developing the website focused a lot on creating a user centered solution. We involved users every step of development to get constant feedback on new solutions. <br>
+<p>The process of developing the website focused a lot on creating a user centered solution. We involved users every step of development in order to get constant feedback on our iterations. <br>
 </p>
 </div>
 
@@ -178,9 +178,8 @@
     <span>01</span>
     <div class="numberFlexWrap">
       <h4>User Research</h4>
-    <p>Creation and development of a website and visual idenity 
-of a newly founded clothing store
-located in the suburbs of Copenhagen</p>
+    <p>We identified the target audience, through surveys and user interviews. We then created an empathy map, personas and user journeys.
+      Later we determined our UX metrics and KPI's. </p>
   </div>
   </div>
 </div>
@@ -190,9 +189,7 @@ located in the suburbs of Copenhagen</p>
     <span>02</span>
     <div class="numberFlexWrap">
       <h4>Information Architecture</h4>
-    <p>Creation and development of a website and visual idenity 
-of a newly founded clothing store
-located in the suburbs of Copenhagen</p>
+    <p>We developed new taxonomy and sitemap, which we then tested through card sorting and interviews.</p>
   </div>
   </div>
 </div>
@@ -202,9 +199,7 @@ located in the suburbs of Copenhagen</p>
     <span>03</span>
     <div class="numberFlexWrap">
       <h4> Wireframing & prototyping</h4>
-    <p>Creation and development of a website and visual idenity 
-of a newly founded clothing store
-located in the suburbs of Copenhagen</p>
+    <p>After determining our UX metrics, we brainstormed and created many lo-fi wireframes for testing the users flow. Through iterative testing, we conucted final usability tests on a hi-fi prototype.</p>
   </div>
   </div>
 </div>
