--- a/frogalypse.html
+++ b/frogalypse.html
@@ -77,7 +77,7 @@
         <div class="singleProjectHeader">
           <h1>Froglypse game</h1>
           <p class="singleProjectSubHeader">
-            Design and development of my own game, including all graphic assets, as part of my 1'st semester exam
+            Design and development of my own game, including all graphic assets, as part of my 1'st semester exam.
           </p>
         </div>
       </div>
@@ -92,8 +92,8 @@
         <div class="projectOverviewWrapper">
          
           <p>
-            Throughout this project, I designed all visual assets using Adobe Illustrator. The main purpose was to learn how to use javascript for DOM manipulation. <br>
-            Furthermore, this was an introduction to CSS animations and how to call them from user interactions.
+            Throughout this project, I designed all visual assets using Adobe Illustrator. The main purpose of the project was to learn how to use javascript for DOM manipulation and various loop mathods. <br>
+            Furthermore, this was an introduction to CSS animations and how to call them based on user interactions.
           </p>
         </div>
 
