--- a/siffroder.html
+++ b/siffroder.html
@@ -210,9 +210,9 @@
     <span>04</span>
     <div class="numberFlexWrap">
       <h4>User testing & implementation</h4>
-    <p>Creation and development of a website and visual idenity 
-of a newly founded clothing store
-located in the suburbs of Copenhagen</p>
+    <p>Our methodology for testing prototypes included think-out-loud testing, user interviews & usability testing.
+      Based on final prototype, we coded a custom child-theme in Wordpress and set up a database for new products.
+    </p>
   </div>
   </div>
 </div>
@@ -222,8 +222,8 @@ located in the suburbs of Copenhagen</p>
 <section class="solutionSection">
         <div class="intro">
           <h2>The solution</h2>
-          <p> The website solution included a design system, design guide and all the images and videos were produced by our project group.  <br>
-            I learned a lot about usability testing, using the right heuristics, and especially on how to create new solutions based on users experienced painpoints.
+          <p> The website solution included a design system, design guide and all the images and videos were produced by the project members.  <br>
+            I learned a lot about usability testing, using the right heuristics, and especially on how to create new solutions based on users stories and experienced painpoints.
           </p>
         </div>
 
