--- a/speeddesign.html
+++ b/speeddesign.html
@@ -96,7 +96,7 @@
           <p>
            As part of my elective of Digital Design, a lot of our work is within Figma. We brainstorm, strategize and develop projects in this software, and therefore we got this fun challenge.
             <br>
-            The scope was mainly to practice and evaluate if we understood the workflow of creating interactive prototypes containing <span> micro-interactions</span> and use of <span>Components</span>.
+            The scope was mainly to practice and evaluate, if we understood the workflow of creating interactive prototypes containing <span> micro-interactions</span> and use of <span>Components</span>.
 
           </p>
         </div>
@@ -128,7 +128,7 @@
 <section class="solutionSection moonSolution">
         <div class="intro introsolutionMoon">
           <h2>The solution</h2>
-          <p> As the project was only 45 minutes, the solution is obviously a bit rough on the edges. It's tricky to replicate the timing of transitions in such a short span, but it was a really fun challenge.
+          <p> As the project was only 45 minutes, the solution is obviously a bit rough around the edges. It's tricky to replicate the timing of transitions in such a short time span, but it was a really fun challenge.
           </p>
               <a href="https://www.figma.com/proto/35TvX6E0vvf2mYopEJbHay/Untitled?page-id=85%3A159&node-id=85%3A642&viewport=521%2C426%2C0.07&scaling=scale-down&starting-point-node-id=85%3A160" target="_blank" class="prototypeButton"">
                 <button class="frontButton">
