--- a/ungdomsbyen.html
+++ b/ungdomsbyen.html
@@ -78,7 +78,7 @@
         <div class="singleProjectHeader">
           <h1>Ungdomsbyen</h1>
           <p class="singleProjectSubHeader">
-            Design and development of a website with a focus on redesigning Information Architecture aswell as layout.
+            Design and development of a website with a focus on redesigning Information Architecture and layout.
           </p>
         </div>
       </div>
@@ -93,7 +93,7 @@
         <div class="projectOverviewWrapper">
          
           <p>
-            This project aimed at creating and designing a new Information Architecture and Visual design for a company who specializes in workshops and education in the UN's world goals.
+            This project aimed at developing and designing new Information Architecture and Visual design for a company who specializes in workshops and education in the UN's 17 world goals.
           </p>
         </div>
 
@@ -130,8 +130,8 @@
         <div class="theChallengeWrapper">
         
           <p>
-            The focus of the project was creating a new informations architecture, and creating a new user flow for users, depending on which institution they where from.
-            Mainly, we had to analyse and evaluate existing workshops and other services and create a new taxonomy, and later code a solution for dynamic content. 
+            Besides a new informations architecture, our challenge was to design a new user flow, and optimize the usability of their existing solution.
+            Mainly, we had to analyse and evaluate existing services and create a new taxonomy, and later code a solution including dynamic content through a CMS system. 
           </p>
         </div>
 
@@ -140,12 +140,12 @@
 
             <div class="challengeNumberFlexbox">
               <span class="challengeNumber" style="letter-spacing: 5px">01</span>
-          <p> Design and evaluate new Information Architecture</p>
+          <p> Redesign and evaluate Information Architecture</p>
         </div>
 
          <div class="challengeNumberFlexbox">
 <span class="challengeNumber">02</span>
-          <p>  Design new visual identity
+          <p>  Design new visual layout & style
           </p>
 </div>
  <div class="challengeNumberFlexbox">
@@ -160,7 +160,7 @@
         <section class="procesSection"> 
               <div class="procesIntro">
           <h2>The process</h2>
-<p>The process of developing the website focused a lot on testing new information architecture through various methodologies. We used Wordpress for the frontend development, so that the company had easier access to later update or add new products.<br>
+<p>The process of developing the website focused a lot on testing new information architecture through card sorting and user interviews. We used Wordpress for the frontend development, so that the company had easier access to later update or add new products.<br>
 </p>
 </div>
 
@@ -173,7 +173,7 @@
     <span>01</span>
     <div class="numberFlexWrap">
       <h4>User Research</h4>
-    <p>Initial research and interviews of teachers and student representatives, while also testing the existing solution.</p>
+    <p>Initial research and interviews of relevant teachers and student representatives, while also conducting early testing on the existing solution.</p>
   </div>
   </div>
 </div>
@@ -204,7 +204,7 @@
     <span>04</span>
     <div class="numberFlexWrap">
       <h4>User testing & implementation</h4>
-    <p>We tested both general usability and user expereience. We also evaluated the solution through experts, based on Jakob Nielsens web heuristics .</p>
+    <p>We tested both general usability and overall user expereience. We also evaluated the solution through experts, based on Jakob Nielsens web heuristics .</p>
   </div>
   </div>
 </div>
@@ -214,8 +214,7 @@
 <section class="solutionSection">
         <div class="intro">
           <h2>The solution</h2>
-          <p> The website solution included a design system, design guide and all the images and videos were produced by our project group.  <br>
-            I learned a lot about usability testing, using the right heuristics, and especially on how to create new solutions based on users experienced painpoints.
+          <p> The final solution was very well received by the company. They highlighted that our test results showed a great improvement on how easily users could navigate and complete their intended action.
           </p>
         </div>
 
