--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
             I am passionate about improving peoples experiences through design and i love working together with motivated creative minds.   <br>
 </p>
 <p>Through my education, I've come to love the intersection between design and front-end development.
-        I have studied a variety of subjects centered around Human Centered Design, both physical and digital. <br> From my studies, my interest grew in <span> Interaction-design</span> and <span>UX-design</span> and how we can design better solutions for people everywhere.</p>
+        I have studied a variety of subjects revolving around Human Centered Design, both physical and digital. <br> From my studies, my interest grew in <span> Interaction-design</span> and <span>UX-design</span> and how we can design better solutions for people everywhere.</p>
      <a href="Resume/Resumé.pdf" target="_blank" class="pdfResume">
                 <button class="protoButton">
                  <span> Download CV </span>
