--- a/about.html
+++ b/about.html
@@ -199,6 +199,7 @@
           <p>Tailwind CSS</p>
           <p>Svelte</p>
           <p>Accesablity</p>
+           <p>CMS</p>
          
           
         </div>
