--- a/about.html
+++ b/about.html
@@ -80,10 +80,10 @@
 
         <div class="aboutIntro">
             <div class="aboutText">
-            <p>Hi there! My name is Lukas Maximilian, and I am currently studying multimedia design at Copenhagen School of Design and Technology. 
+            <p>Hi there! <br>My name is Lukas, and I am currently studying multimedia design at Copenhagen School of Design and Technology. 
             I am passionate about improving peoples experiences through design and i love working together with motivated creative minds.   <br>
 </p>
-<p>Through my education, I've come to love the intersection between design and front-end development.
+<p>Through my education, I've come to love the intersection between design, content creation and front-end development.
         I have studied a variety of subjects revolving around Human Centered Design, both physical and digital. <br> From my studies, my interest grew in <span> Interaction-design</span> and <span>UX-design</span> and how we can design better solutions for people everywhere.</p>
      <a href="Resume/Resumé.pdf" target="_blank" class="pdfResume">
                 <button class="protoButton">
