--- a/about.html
+++ b/about.html
@@ -198,7 +198,7 @@
           <p>Git</p>
           <p>Tailwind CSS</p>
           <p>Svelte</p>
-          <p>Accesablity</p>
+          <p>Accessibility</p>
            <p>CMS</p>
          
           
