--- a/speeddesign.html
+++ b/speeddesign.html
@@ -170,7 +170,7 @@
       <div class="footerWrapper">
         <p class="footerHeader">Let's connect</p>
         <p class="footerParagraph">
-          I am currently looking for internship, <br />
+          I am currently looking for a student position, <br />
           so let's get in touch!
         </p>
         <div class="footerIcons">
