--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 
         <div class="aboutIntro">
             <div class="aboutText">
-            <p>Hi there! <br>My name is Lukas, and I am currently studying multimedia design at Copenhagen School of Design and Technology. 
+            <p>Hi there! <br>My name is Lukas, and I am currently studying Digital Concept development at Copenhagen School of Design and Technology. 
             I am passionate about improving peoples experiences through design and i love working together with motivated creative minds.   <br>
 </p>
 <p>Through my education, I've come to love the intersection between design, content creation and front-end development.
