--- a/home.html
+++ b/home.html
@@ -82,8 +82,8 @@
         </h1>
 
         <p class="heroSubText">
-          Copenhagen based aspriring UX/UI designer currently studying Multimedia
-          Design at the Copenhagen school of Design and Technology.
+          Copenhagen based aspriring UX/UI designer currently studying Digital Concept development
+           at the Copenhagen school of Design and Technology.
         </p>
 
         <div class="scrollSection">
